--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "select": "node ./run-tool.js"
+    "showlist": "node ./run-tool.js"
   },
   "keywords": [],
   "author": "",
